tests/js_error/source_locations/expression/template/to_string_later_part.exp
TypeError: symbol cannot be converted to string
  ┌ source_locations/expression/template/to_string_later_part.js:1:9
  |
1 | `${1} ${Symbol.iterator}`
  |         ^
Stack trace:
  at <global> (source_locations/expression/template/to_string_later_part.js:1:9)